--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,7 @@
 
   // Auto fix with ESLint on save
   "editor.codeActionsOnSave": {
-    "source.addMissingImports": "explicit",
+    // "source.addMissingImports": "explicit",
     "source.fixAll.eslint": "explicit"
   },
 
