--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@logtail/pino": "^0.5.5",
     "@sentry/nextjs": "^9.29.0",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.2",
     "next": "^15.3.3",
     "next-intl": "^4.1.0",
@@ -49,6 +50,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.58.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.25.64"
   },
   "devDependencies": {
@@ -81,6 +83,7 @@
     "@vitest/browser": "^3.2.3",
     "@vitest/coverage-v8": "^3.2.3",
     "@vitest/expect": "^3.2.3",
+    "autoprefixer": "^10.4.21",
     "checkly": "^5.6.0",
     "chromatic": "^12.2.0",
     "conventional-changelog-conventionalcommits": "^9.0.0",
